# flowintent-backend

./: .gitignore  Dockerfile.render  README.md  gunicorn.conf.py  pyproject.toml  render.yaml
src/: __init__.py  config.py  dependencies.py  main.py
src/agents/: __init__.py  base.py  integration_agent.py  intent_parser.py  optimization_agent.py  orchestrator.py  platform_agent.py  template_agent.py  workflow_agent.py  workflow_builder.py
src/api/: __init__.py  auth.py  community.py  dashboard.py  integrations.py  natural_language_workflows.py  optimization.py  research.py  router.py  templates.py  workflow_management.py  workflow_recommendations.py  workflows.py
src/errors/: __init__.py  base.py  handlers.py  recovery.py
src/integrations/: __init__.py  auth.py  clients.py  config.py  manager.py  registry.py
src/models/: __init__.py  community.py  integration.py  template.py  user.py  workflow.py
src/scripts/: __init__.py  credential_demo.py  demo_integration_agent.py  demo_workflow.py  import_n8n_templates.py  init_db.py  optimization_db_setup.py  quickstart.py  run_ag_ui.py  run_app.py  run_temporal_worker.py  seed_vector_db.py  setup_cerebras.py  setup_env.py  setup_platform.py  template_db_setup.py  test_integration_agent.py  verify_env.py
src/services/: __init__.py  ab_testing_service.py  auth.py  community_service.py  credential_manager.py  database.py  integration_registry.py  integration_service.py  ml_prediction_service.py  monitoring_service.py  rag_service.py  redis_service.py  research_service.py  scraping_service.py  template_service.py  (+3 more)
(+4 files in other folders)
